--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
           Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
           reprehenderit libero enim!</p>
-        <a href="./Afaq Ahmed Resume.pdf" download="" class="cta">Download Resume</a>
+        <a href="./ar Ahmed Resume.pdf" download="" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
