--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="hero container">
       <div>
         <h1>Hello, <span></span></h1>
-        <h1>My Name is <span></span></h1>
+        <h1>My Name is usman tariq <span></span></h1>
         <h1>Afaq <span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
