--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1>Hello, <span></span></h1>
+        <h1>Hello i am afaq<span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>Afaq <span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
